--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Login/SignIn.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Login/SignIn.cshtml
@@ -1,9 +1,22 @@
 ﻿
+@model Usuario
+
 @{
     ViewData["Title"] = "Inicio de sesión";
 }
 
-@model Usuario
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
+
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["Message"]
+    </div>
+}
 
 <!DOCTYPE html>
 <html lang="en">
