--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Login/SignIn.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Login/SignIn.cshtml
@@ -30,7 +30,7 @@
         </h1>
         <div class="form-floating">
             @* Formulario para la ingresión de datos *@
-            <form id="formInicioSesion" method="post" asp-controller="Login" asp-action="ValidarDataAnnotations"> @* Falta editar el asp-action de esta etiqueta, tambien agregar las DataAnnotations en el modelo usuario*@
+            <form id="formInicioSesion" method="post" asp-controller="Login" asp-action="ValidarDataAnnotations">
                 @* Sección para ingresar el usuario *@
                 <div class="mt-5">
                     <label asp-for="Username">Usuario:</label>
