Inicio de Sesion
Se termina el apartado para el inicio de sesion.

--- a/Solucion_Tarea2_BD1/Tarea2_BD1/wwwroot/css/site.css
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/wwwroot/css/site.css
@@ -20,3 +20,12 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+#div-filtrar {
+    display: flex;
+    align-items: center;
+}
+
+#btnFiltro {
+    margin-left: 10px;
+}
