--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/ListarFiltrar.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/ListarFiltrar.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Tarea2_BD1.Models.Empleado>
+﻿
+@model IEnumerable<Tarea2_BD1.Models.Empleado>
 
 @{
     ViewData["Title"] = "Empleados";
@@ -21,44 +22,57 @@
     <h1>Lista de Empleados</h1>
 
     <div>
-        <div id="div-filtrar">
+        <div id="div-filtrar" class="mt-3">
             <input type="text" id="entFiltro" class="form-control" placeholder="Busqueda por nombre o valor de documento de identidad">
             <button id="btnFiltro" class="btn btn-primary" onclick="location.href='@Url.Action("Listar", "Empleado")'">Buscar</button>
         </div>
-        <div id="div-botonesCRUD">
-            @* Deshabilitar estos botones hasta que se seleccione un empleado en la lista de empleados *@
+        @* <div id="div-botonesCRUD">
             <button id="btnConsulta" class="btn btn-primary" onclick="location.href='@Url.Action("", "")'">Consulta</button>
             <button id="btnActualizar" class="btn btn-primary" onclick="location.href='@Url.Action("", "")'">Actualizar</button>
             <button id="btnBorrar" class="btn btn-primary" onclick="location.href='@Url.Action("Listar", "Empleado")'">Borrar</button>
-        </div>
-        <div id="div-lista">
+        </div> *@
+        <div id="div-lista" class="mt-5">
             <table class="table table-hover">
                 <tr>
-                    <th id="encCheck">
-                        Seleccion
-                    </th>
-                    <th id="encId">
+                    <th id="encNom">
                         @Html.DisplayNameFor(model => model.Nombre)
                     </th>
-                    <th id="encNom">
-                        @* @Html.DisplayNameFor(model => model.ValorDocumentoIdentidad) *@
-                        Identidad
+                    <th id="encValorDocIdent">
+                        Valor del documento de identidad
                     </th>
                 </tr>
                 @foreach (var item in Model)
                 {
                     <tr>
                         <td>
-                            <input type="checkbox" id="seleccionEmpleado"/>
+                            @Html.DisplayFor(modelItem => item.Nombre)
                         </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ValorDocumentoIdentidad)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Consultar", "Consultar", new { id = item.Id }) |
+                            @Html.ActionLink("Modificar", "Modificar", new { id = item.Id }) |
+                            @Html.ActionLink("Borrar", "Borrar", new { Nombre = item.Nombre})//new { id = item.Id })
+                        </td>
+                    </tr>
+                }
+               @*  @foreach (var item in Model)
+                {
+                    <tr>
                         <td>
                             @Html.DisplayFor(modelItem => item.Nombre)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.ValorDocumentoIdentidad)
                         </td>
+                        <td>
+                            @Html.ActionLink("Consultar", "Consultar") |
+                            @Html.ActionLink("Modificar", "Modificar") |
+                            @Html.ActionLink("Borrar", "Borrar")
+                        </td>
                     </tr>
-                }
+                } *@
             </table>
         </div>
         <form>
