--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Agregar.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Agregar.cshtml
@@ -1,5 +1,67 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
+@model Empleado
+
 @{
+    ViewData["Title"] = "Agregar empleados";
 }
+
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["Message"]
+    </div>
+}
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+</head>
+<body>
+    <h1>Agregar empleado</h1>
+
+    <div class="form-floating mt-5">
+        <form id="formAgregarEmp" method="post"> @* asp-controller="Agregar" asp-action="Empleado" *@
+            @* Sección para ingresar el valor de documentode identidad *@
+            <div class="mt-3">
+                <label asp-for="ValorDocumentoIdentidad">Valor del documento de identidad:</label>
+                <input asp-for="ValorDocumentoIdentidad" type="text" id="entValorDocIdent" class="form-control" placeholder="Escriba el nombre aquí">
+                <span asp-validation-for="ValorDocumentoIdentidad" id="spanValorDocIdent" class="text-danger"></span>
+            </div>
+
+            @* Sección para ingresar el nombre *@
+            <div class="mt-3">
+                <label asp-for="Nombre">Nombre:</label>
+                <input asp-for="Nombre" type="text" id="entNombre" class="form-control" placeholder="Escriba el salario aquí">
+                <span asp-validation-for="Nombre" id="spanSalario" class="text-danger"></span>
+            </div>
+
+            @* Sección para ingresar el puesto *@
+            <div id="div-PartialView" class="mt-3" ='@Url.Action("ObtenerPuestos", "Empleado")'>
+                <label asp-for="IdPuestoNavigation">Puesto:</label>
+                <input asp-for="IdPuestoNavigation" type="text" id="entPuesto" class="form-control" placeholder="Seleccione el puesto aquí">
+                <span asp-validation-for="IdPuestoNavigation" id="spanPuesto" class="text-danger"></span>
+
+                <input type="text" id="entPuesto" class="form-control" list="listaPuestos" name="dato" placeholder="Seleccione el puesto aquí">
+
+                <div id="datalistContainer"></div>
+
+                @* @Html.Partial("_VistaParcialSeleccionDePuesto") *@
+            </div>
+            
+            <button type="submit" id="btnAgregarEmp" class="btn btn-primary mt-3">Buscar</button>
+
+        </form>
+
+
+    </div>
+</body>
+
+
+</html>
