--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Listar.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Listar.cshtml
@@ -21,7 +21,7 @@
 <body>
     <h1>Lista de Empleados</h1>
 
-    <div>
+    <div class="form-floating">
         <form id="formFiltrar" method="post" asp-controller="Empleado" asp-action="Filtrar" class="mt-3">
             @* action="@Url.Action("Filtrar", "Empleado")" *@
             <div id="div-filtrar">
@@ -34,14 +34,14 @@
             @Html.Partial("_VistaParcialFiltro", Model)
         </div>
 
-        <form>
-            <input type="submit" id="btnAgregar" class="btn btn-primary" value="Agregar" onclick="showPopup(); return event.preventDefault();">
+        <form method="post" action="@Url.Action("Agregar", "Empleado")">
+            <input type="submit" id="btnAgregar" class="btn btn-primary" value="Agregar">
         </form>
     </div>
 </body>
 
 @* Codigo para agregar empleados *@
-<div id="overlay"></div>
+@* <div id="overlay"></div>
 
 <div id="elPopup" class="contenedorPopup">
     <div id="div-agregarEmpleado">
@@ -70,6 +70,6 @@
 
         <button id="btnCerrarPopup">X</button>
     </div>
-</div>
+</div> *@
 
 </html>
