--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Agregar.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Agregar.cshtml
@@ -28,12 +28,11 @@
     <h1>Agregar empleado</h1>
 
     <div>
-        @* action="@Url.Action("Agregar", "Empleado")" *@
-        <form id="formAgregarEmp" method="post" > <!-- Llamar a ControlErroresAvisos -->
+        <form id="formAgregarEmp" method="post" asp-controller="Empleado" asp-action="ControlDeErroresAvisos">
             @* Sección para ingresar el valor de documentode identidad *@
             <div class="mt-3">
                 <label asp-for="ValorDocumentoIdentidad">Valor del documento de identidad:</label>
-                <input asp-for="ValorDocumentoIdentidad" type="text" id="entValorDocIdent" class="form-control" name="stringValorDocIdent placeholder="Escriba el nombre aquí">
+                <input asp-for="ValorDocumentoIdentidad" type="text" id="entValorDocIdent" class="form-control" name="stringValorDocIdent" placeholder="Escriba el nombre aquí">
                 <span asp-validation-for="ValorDocumentoIdentidad" id="spanValorDocIdent" class="text-danger"></span>
             </div>
 
@@ -61,7 +60,7 @@
                     <option value="Recepcionista">Recepcionista</option>
                 </select>
             </div>
-            
+             
             <button type="submit" id="btnAgregarEmp" class="btn btn-primary mt-3">Buscar</button>
 
         </form>
