--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Agregar.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Agregar.cshtml
@@ -18,7 +18,6 @@
     }
 }
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,20 +31,21 @@
             @* Sección para ingresar el valor de documentode identidad *@
             <div class="mt-3">
                 <label asp-for="ValorDocumentoIdentidad">Valor del documento de identidad:</label>
-                <input asp-for="ValorDocumentoIdentidad" type="text" id="entValorDocIdent" class="form-control" name="stringValorDocIdent" placeholder="Escriba el nombre aquí">
+                <input asp-for="ValorDocumentoIdentidad" type="text" id="entValorDocIdent" class="form-control" placeholder="Escriba el nombre aquí">
                 <span asp-validation-for="ValorDocumentoIdentidad" id="spanValorDocIdent" class="text-danger"></span>
             </div>
 
             @* Sección para ingresar el nombre *@
             <div class="mt-3">
                 <label asp-for="Nombre">Nombre:</label>
-                <input asp-for="Nombre" type="text" id="entNombre" class="form-control" name="stringNombre" placeholder="Escriba el salario aquí">
+                <input asp-for="Nombre" type="text" id="entNombre" class="form-control" placeholder="Escriba el salario aquí">
                 <span asp-validation-for="Nombre" id="spanSalario" class="text-danger"></span>
             </div>
 
             @* Sección para ingresar el puesto *@
             <div id="div-PartialView" class="mt-3">
                 <label>Puesto:</label>
+                @* <input type="text" class="form-control" name="stringPuesto" placeholder="Probandoooooooooooo"> *@
                 <select id="selectListaPuestos" class="form-select" name="stringPuesto">
                     <option value="nada" selected disabled>Seleccione un puesto:</option>
                     <option value="Albañil">Albañil</option>
@@ -64,6 +64,11 @@
             <button type="submit" id="btnAgregarEmp" class="btn btn-primary mt-3">Buscar</button>
 
         </form>
+
+        @* <div class="mt-3" id="div-botones-agregarEmpleado">
+            <button type="submit" id="btnAgregarEmpleado" class="btn btn-primary" form="formAgregarEmp">Agregar empleado</button>
+        </div> *@
+
     </div>
 </body>
 </html>
