--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Agregar.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/Agregar.cshtml
@@ -26,7 +26,7 @@
 <body>
     <h1>Agregar empleado</h1>
 
-    <div>
+    <div class="form-floating">
         <form id="formAgregarEmp" method="post" asp-controller="Empleado" asp-action="ControlDeErroresAvisos">
             @* Sección para ingresar el valor de documentode identidad *@
             <div class="mt-3">
@@ -68,7 +68,7 @@
 
         <div class="mt-3" id="div-botones-agregarEmpleado">
             <button type="submit" id="btnAgregarEmpleado" class="btn btn-primary" form="formAgregarEmp">Agregar empleado</button>
-            <button id="btnBackAgregarEmpleados" class="btn btn-primary" onclick="location.href='@Url.Action("Listar", "Empleado")'">Regresar</button>
+            <button id="btnBackAgregar" class="btn btn-primary" onclick="location.href='@Url.Action("Listar", "Empleado")'">Regresar</button>
         </div>
 
     </div>
