--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Movimiento/Listar.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Movimiento/Listar.cshtml
@@ -50,7 +50,7 @@
                 </tr>
             }
         </table>
-        <h5 class="mt-3">A continuación los movimientos del empleado:</h5>
+        <h5 class="mt-5">A continuación los movimientos del empleado:</h5>
         
         <table id="tablaMovimientos" class="table table-hover">
             <tr>
@@ -105,7 +105,7 @@
         </table>
 
         <div class="mt-3" id="div-botones-agregarEmpleado">
-            <button type="submit" id="btnAgregar" class="btn btn-primary" onclick="location.href='@Url.Action("Agregar", "Movimiento")'">Agregar movimiento</button>
+            @* <button type="submit" id="btnAgregar" class="btn btn-primary" onclick="location.href='@Url.Action("Agregar", "Movimiento")'">Agregar movimiento</button> *@
             <button id="btnBackAgregar" class="btn btn-primary" onclick="location.href='@Url.Action("Listar", "Empleado")'">Regresar</button>
         </div>
 
