Borrar y consultar empleados
Se terminan todos los requerimientos de la tarea.
Pendiente por hacer las pruebas de toda la progra y el analisis de resultados.

--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/_VistaParcialFiltro.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Empleado/_VistaParcialFiltro.cshtml
@@ -29,9 +29,9 @@
                     @Html.DisplayFor(modelItem => item.ValorDocumentoIdentidad)
                 </td>
                 <td>
-                    @Html.ActionLink("Consultar", "Consultar", new { Nombre = item.Nombre }) |
+                    @Html.ActionLink("Consultar", "Consulta", "Empleado", new { Nombre = item.Nombre }) |
                     @Html.ActionLink("Modificar", "Update", "Empleado", new { Nombre = item.Nombre }) |
-                    @Html.ActionLink("Borrar", "Borrar", new { Nombre = item.Nombre }) |
+                    @Html.ActionLink("Borrar", "Borrar", "Empleado", new { Nombre = item.Nombre }) |
                     @Html.ActionLink("Movimientos", "Listar", "Movimiento", new { Nombre = item.Nombre }) |
                     @Html.ActionLink("Insertar movimiento", "Agregar", "Movimiento", new { Nombre = item.Nombre })
                 </td>
