--- a/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Movimiento/Agregar.cshtml
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/Views/Movimiento/Agregar.cshtml
@@ -48,7 +48,7 @@
                 <input type="text" id="entNombreMov" class="form-control" name="empleado.Nombre" value="@Html.DisplayFor(modelItem => Model.empleado.Nombre)" readonly>
             </div>
 
-            @* Sección para el nombre *@
+            @* Sección para el saldo de vacaciones *@
             <div class="mt-3">
                 <label>Saldo vacaciones:</label>
                 <input type="text" id="entSaldoVacacionesMov" class="form-control" name="empleado.SaldoVacaciones" value="@Html.DisplayFor(modelItem => Model.empleado.SaldoVacaciones)" readonly>
