--- a/Solucion_Tarea2_BD1/Tarea2_BD1/wwwroot/css/site.css
+++ b/Solucion_Tarea2_BD1/Tarea2_BD1/wwwroot/css/site.css
@@ -46,7 +46,7 @@ th, td {
     vertical-align: middle;
 }
 
-#btnBackAgregar {
+#btnBackAgregar, #botonLogOut {
     position: absolute;
     right: 0;
 }
